gccida/g2/fold_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3781:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3790:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3799:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3828:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3828:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3834:4: error: expected ';' after expression
rtx v59; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3834:5: error: use of undeclared identifier 'v59'
rtx v59; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3835:6: error: use of undeclared identifier 'v60'
rtx *v60; // rbp 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3855:4: error: expected ';' after expression
rtx v80; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3855:5: error: use of undeclared identifier 'v80'
rtx v80; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3859:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v84; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3869:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v94; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3870:4: error: expected ';' after expression
rtx v95; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3870:5: error: use of undeclared identifier 'v95'
rtx v95; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3881:4: error: expected ';' after expression
rtx v106; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3881:5: error: use of undeclared identifier 'v106'
rtx v106; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3891:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v116; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3892:4: error: expected ';' after expression
rtx v117; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/cse.c:3892:5: error: use of undeclared identifier 'v117'
rtx v117; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fold_rtx/src/obj/cse.o] Error 1
